force-app/main/default/objects/Inspection_Certification__c/fields/Unit_where_Asset_is_located__c.field-meta.xml
<CustomField>
    <fullName>Unit_where_Asset_is_located__c</fullName>
    <formula>WD_Asset__r.Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit where Asset is located</label>
    <type>Text</type>
</CustomField>