force-app/main/default/objects/Inspection_Certification__c/fields/WD_Asset__c.field-meta.xml
<CustomField>
    <fullName>WD_Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>All items must be linked to an asset (it may have to refer to the asset it lives in during transit)</inlineHelpText>
    <label>WD Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipName>Certification</relationshipName>
    <type>Lookup</type>
</CustomField>