force-app/main/default/objects/Inspection_Certification__c/fields/WD_Form__c.field-meta.xml
<CustomField>
    <fullName>WD_Form__c</fullName>
    <description>Name of the WD Form required to be filled out to complete the inspection/service</description>
    <label>WD Form Required</label>
    <length>182</length>
    <type>Text</type>
</CustomField>