force-app/main/default/objects/Inspection_Certification__c/fields/WD_ID_Tag__c.field-meta.xml
<CustomField>
    <fullName>WD_ID_Tag__c</fullName>
    <label>WD ID Tag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>