force-app/main/default/objects/Inspection_Certification__c/fields/WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>WD_Unit__c</fullName>
    <description>Links to the Related Assets Assigned Unit</description>
    <formula>WD_Asset__r.Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Links to the Related Assets Assigned Unit</inlineHelpText>
    <label>WD Unit</label>
    <type>Text</type>
</CustomField>