force-app/main/default/objects/Inspection_Certification__c/fields/Whip_Check__c.field-meta.xml
<CustomField>
    <fullName>Whip_Check__c</fullName>
    <label>Whip Check</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Whip Check</fullName>
            </value>
            <value>
                <fullName>Hose Restraint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>