force-app/main/default/objects/Inspection_Certification__c/fields/Wire_Cable__c.field-meta.xml
<CustomField>
    <fullName>Wire_Cable__c</fullName>
    <label>Wire Cable Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Load Line #1</fullName>
            </value>
            <value>
                <fullName>Load Line #2</fullName>
            </value>
            <value>
                <fullName>Power Swivel Torque Line #1</fullName>
            </value>
            <value>
                <fullName>Power Swivel Torque Line #2</fullName>
            </value>
            <value>
                <fullName>Winch Line #1</fullName>
            </value>
            <value>
                <fullName>Winch Line #2</fullName>
            </value>
            <value>
                <fullName>Monkey Board - Outrigger #1</fullName>
            </value>
            <value>
                <fullName>Monkey Board - Outrigger #2</fullName>
            </value>
            <value>
                <fullName>Monkey Board - Raising Line DS</fullName>
            </value>
            <value>
                <fullName>Monkey Board Raising Line ODS</fullName>
            </value>
            <value>
                <fullName>Geronimo Line</fullName>
            </value>
            <value>
                <fullName>Drill Line</fullName>
            </value>
            <value>
                <fullName>Manrider Winch Line</fullName>
            </value>
            <value>
                <fullName>Load Line #3</fullName>
            </value>
            <value>
                <fullName>Load Line #4</fullName>
            </value>
            <value>
                <fullName>Stabiliser Line #1</fullName>
            </value>
            <value>
                <fullName>Stabiliser Line #2</fullName>
            </value>
            <value>
                <fullName>Stabiliser Line #3</fullName>
            </value>
            <value>
                <fullName>Stabiliser Line #4</fullName>
            </value>
            <value>
                <fullName>Derrick Outrigger #1</fullName>
            </value>
            <value>
                <fullName>Derrick Outrigger #2</fullName>
            </value>
            <value>
                <fullName>Derrick Outrigger #3</fullName>
            </value>
            <value>
                <fullName>Derrick Outrigger #4</fullName>
            </value>
            <value>
                <fullName>Crown - Outrigger #1</fullName>
            </value>
            <value>
                <fullName>Crown - Outrigger #2</fullName>
            </value>
            <value>
                <fullName>Crown - Rod Board #1</fullName>
            </value>
            <value>
                <fullName>Crown - Rod Board #2</fullName>
            </value>
            <value>
                <fullName>Wire Winch Cable - Hand Winch</fullName>
            </value>
            <value>
                <fullName>Tong Back Up Wire Sling</fullName>
            </value>
            <value>
                <fullName>High Pressure Line Restraint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>