force-app/main/default/objects/Inspection_Certification__c/recordTypes/Circulating_Iron.recordType-meta.xml
<RecordType>
    <fullName>Circulating_Iron</fullName>
    <active>true</active>
    <label>Circulating Iron</label>
</RecordType>