force-app/main/default/objects/Inspection_Certification__c/recordTypes/Fire_Extinguisher.recordType-meta.xml
<RecordType>
    <fullName>Fire_Extinguisher</fullName>
    <active>true</active>
    <label>Fire Extinguisher</label>
</RecordType>