force-app/main/default/objects/Inspection_Certification__c/recordTypes/Gauges.recordType-meta.xml
<RecordType>
    <fullName>Gauges</fullName>
    <active>true</active>
    <label>Gauges</label>
</RecordType>