force-app/main/default/objects/Inspection_Certification__c/recordTypes/HAVD.recordType-meta.xml
<RecordType>
    <fullName>HAVD</fullName>
    <active>true</active>
    <description>Hazardous Area</description>
    <label>HAVD</label>
</RecordType>