force-app/main/default/objects/Inspection_Certification__c/recordTypes/Hose.recordType-meta.xml
<RecordType>
    <fullName>Hose</fullName>
    <active>true</active>
    <label>Hose</label>
</RecordType>