force-app/main/default/objects/Inspection_Certification__c/recordTypes/Lifting_Equipment.recordType-meta.xml
<RecordType>
    <fullName>Lifting_Equipment</fullName>
    <active>true</active>
    <label>Lifting Equipment</label>
</RecordType>