force-app/main/default/objects/Inspection_Certification__c/recordTypes/old.recordType-meta.xml
<RecordType>
    <fullName>old</fullName>
    <active>true</active>
    <label>old</label>
</RecordType>