force-app/main/default/objects/Inspection_Certification__c/recordTypes/Other_Inspections.recordType-meta.xml
<RecordType>
    <fullName>Other_Inspections</fullName>
    <active>true</active>
    <label>Other Inspections</label>
</RecordType>