force-app/main/default/objects/Inspection_Certification__c/recordTypes/Pre_Charge_Bottles.recordType-meta.xml
<RecordType>
    <fullName>Pre_Charge_Bottles</fullName>
    <active>true</active>
    <label>Pre-Charge Bottles</label>
</RecordType>