force-app/main/default/objects/Inspection_Certification__c/recordTypes/Pressure_Relief_Valve.recordType-meta.xml
<RecordType>
    <fullName>Pressure_Relief_Valve</fullName>
    <active>true</active>
    <label>Pressure Relief Valve</label>
</RecordType>