force-app/main/default/objects/Inspection_Certification__c/recordTypes/Pressure_Vessels.recordType-meta.xml
<RecordType>
    <fullName>Pressure_Vessels</fullName>
    <active>true</active>
    <label>Pressure Vessels</label>
</RecordType>