force-app/main/default/objects/Inspection_Certification__c/recordTypes/Safety_Equipment.recordType-meta.xml
<RecordType>
    <fullName>Safety_Equipment</fullName>
    <active>true</active>
    <label>Safety Equipment</label>
</RecordType>