force-app/main/default/objects/Inspection_Certification__c/recordTypes/Well_Control_Rig_Equipment.recordType-meta.xml
<RecordType>
    <fullName>Well_Control_Rig_Equipment</fullName>
    <active>true</active>
    <label>Well Control/Rig Equipment</label>
</RecordType>