force-app/main/default/objects/Inspection_Certification__c/recordTypes/Wire_Cable.recordType-meta.xml
<RecordType>
    <fullName>Wire_Cable</fullName>
    <active>true</active>
    <label>Wire Cable</label>
</RecordType>