force-app/main/default/objects/Inspection_Certification__c/listViews/All_Annular.listView-meta.xml
<ListView>
    <fullName>All_Annular</fullName>
    <columns>NAME</columns>
    <columns>Pressure_Relief_Valve__c</columns>
    <columns>Description__c</columns>
    <columns>Date_In_Service__c</columns>
    <columns>Certificate_Number__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>Asset_ID__c</columns>
    <columns>Inspection_Requirement__c</columns>
    <columns>Date_Last_Inspection__c</columns>
    <columns>Date_of_Next_Inspection__c</columns>
    <columns>Days_to_Inspection__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WD_Asset__c</field>
        <operation>contains</operation>
        <value>Annular</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Current</value>
    </filters>
    <filters>
        <field>Inspection_Requirement__c</field>
        <operation>equals</operation>
        <value>5 year 3rd Party</value>
    </filters>
    <label>All - Annular</label>
    <sharedTo>
        <group>Managing_Director</group>
        <group>OPs_super</group>
    </sharedTo>
</ListView>