force-app/main/default/objects/Inspection_Certification__c/listViews/All_Managed_Items.listView-meta.xml
<ListView>
    <fullName>All_Managed_Items</fullName>
    <columns>NAME</columns>
    <columns>Serial_ID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Extinguisher_Type__c</columns>
    <columns>Status__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inspection_Certification__c.Electrical</value>
    </filters>
    <label>All Managed Items</label>
    <sharedTo>
        <group>Finance</group>
        <group>OPs_super</group>
        <group>Purchasing</group>
        <group>Safety</group>
    </sharedTo>
</ListView>