force-app/main/default/objects/Inspection_Certification__c/listViews/Base_Camp_Moomba_Electrical.listView-meta.xml
<ListView>
    <fullName>Base_Camp_Moomba_Electrical</fullName>
    <columns>NAME</columns>
    <columns>Electricial__c</columns>
    <columns>Inspection_Requirement__c</columns>
    <columns>Interval_days__c</columns>
    <columns>Date_Last_Inspection__c</columns>
    <columns>Days_to_Inspection__c</columns>
    <columns>Next_Inspection__c</columns>
    <columns>Date_of_Next_Inspection__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inspection_Certification__c.Electrical</value>
    </filters>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>Base Camp - Moomba</value>
    </filters>
    <label>Base Camp Moomba - Electrical</label>
    <sharedTo>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Purchasing</group>
        <group>Safety</group>
    </sharedTo>
</ListView>