force-app/main/default/objects/Inspection_Certification__c/listViews/bc_Equipment.listView-meta.xml
<ListView>
    <fullName>bc_Equipment</fullName>
    <columns>NAME</columns>
    <columns>Serial_ID__c</columns>
    <columns>Safety_Equipment__c</columns>
    <columns>Description__c</columns>
    <columns>Date_In_Service__c</columns>
    <columns>Certificate_Number__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>Asset_ID__c</columns>
    <columns>Inspection_Requirement__c</columns>
    <columns>Interval_days__c</columns>
    <columns>Date_Last_Inspection__c</columns>
    <columns>Days_to_Inspection__c</columns>
    <columns>Date_of_Next_Inspection__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inspection_Certification__c.Safety_Equipment</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>equals</operation>
        <value>Base Camp - Roma</value>
    </filters>
    <label>Base Camp - Safety Equipment Register</label>
    <sharedTo>
        <group>Base_Camp</group>
        <group>OPs_super</group>
        <group>Purchasing</group>
        <group>Safety</group>
    </sharedTo>
</ListView>