force-app/main/default/objects/Inspection_Certification__c/listViews/BOP_Cert_Register.listView-meta.xml
<ListView>
    <fullName>BOP_Cert_Register</fullName>
    <columns>NAME</columns>
    <columns>Serial_ID__c</columns>
    <columns>Description__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>Asset_ID__c</columns>
    <columns>Inspection_Requirement__c</columns>
    <columns>Date_Last_Inspection__c</columns>
    <columns>Date_of_Next_Inspection__c</columns>
    <columns>Days_to_Inspection__c</columns>
    <columns>WD_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inspection_Type__c</field>
        <operation>equals</operation>
        <value>Certification</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inspection_Certification__c.Well_Control_Rig_Equipment</value>
    </filters>
    <label>WD Well Control / Rig Equipment</label>
    <sharedTo>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Safety</group>
    </sharedTo>
</ListView>