force-app/main/default/objects/Inspection_Certification__c/listViews/c1safety_Equipment.listView-meta.xml
<ListView>
    <fullName>c1safety_Equipment</fullName>
    <columns>NAME</columns>
    <columns>Serial_ID__c</columns>
    <columns>Safety_Equipment__c</columns>
    <columns>Description__c</columns>
    <columns>Date_In_Service__c</columns>
    <columns>Certificate_Number__c</columns>
    <columns>WD_Asset__c</columns>
    <columns>Asset_ID__c</columns>
    <columns>Location__c</columns>
    <columns>Inspection_Requirement__c</columns>
    <columns>Interval_days__c</columns>
    <columns>Date_Last_Inspection__c</columns>
    <columns>Days_to_Inspection__c</columns>
    <columns>Date_of_Next_Inspection__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Inspection_Certification__c.Safety_Equipment</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>contains</operation>
        <value>camp 1</value>
    </filters>
    <filters>
        <field>WD_Unit__c</field>
        <operation>notContain</operation>
        <value>Camp 10,Camp 11</value>
    </filters>
    <label>Camp #01 - Safety Equipment Register</label>
    <sharedTo>
        <group>Camp_1</group>
        <group>Camp_Supervisor</group>
        <group>Managing_Director</group>
        <group>OPs_super</group>
        <group>Purchasing</group>
        <group>Rig_6</group>
        <group>Safety</group>
    </sharedTo>
</ListView>